--- a/sendcommand.css
+++ b/sendcommand.css
@@ -2,7 +2,8 @@
 body {
     font-family: "Helvetica Neue", Arial, sans-serif;
     padding: 20px;
-    background-color: #f4f7f6;
+    /* background-color: #f4f7f6; */
+    background-color: #ffe9d6;
     color: #333;
     text-align: center;
 }
@@ -19,6 +20,10 @@ body {
 
 h1, h2 {
     margin: 0;
+}
+
+h1 {
+    color:blue;
 }
 
 /* リセットボタン（赤色） */
