--- a/sendcommand.css
+++ b/sendcommand.css
@@ -126,7 +126,8 @@ button#sendBtn:active {
     flex-direction: column;
     gap: 15px; 
     justify-content: center; 
-    align-items: flex-start;
+    align-items: center;
+    /* align-items: flex-start; */
     margin-top: 30px; 
 }
 
